added an author controller. added sql logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.h2.console.enabled=true
+logging.level.org.springframework.web=WARN
+logging.level.org.springframework.hibernate=DEBUG
+logging.level.org.springframework.jdbc.core=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
